--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,8 @@
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" >
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}">
-
+            <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
